<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addpatients"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/add_patient"
            />
        <item
            android:id="@+id/patients"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/patientlist" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_highlight_off_black_24dp"
            android:title="@string/log_out" />
    </group>



</menu>
