<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/fifty"
        app:srcCompat="@drawable/pharmeasy"/>

    <EditText
        android:id="@+id/txtpatient"
        android:layout_width="@dimen/form_field_width"
        android:layout_height="@dimen/button_and_form_field_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@color/formfieldbg"
        android:drawableLeft="@drawable/ic_username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="@dimen/form_text_size" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="@dimen/form_field_width"
        android:layout_height="@dimen/button_and_form_field_height"
        android:layout_above="@+id/txtpatient"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="35dp"
        android:background="@color/formfieldbg"
        android:drawableLeft="@drawable/ic_pw"
        android:ems="10"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/confirm_pw"
        android:layout_width="@dimen/form_field_width"
        android:layout_height="@dimen/button_and_form_field_height"
        android:layout_above="@+id/pw"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/thirtyfive"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@color/formfieldbg"
        android:drawableLeft="@drawable/ic_pw"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="16dp" />


    <EditText
        android:id="@+id/mobile"
        android:layout_width="@dimen/form_field_width"
        android:layout_height="@dimen/button_and_form_field_height"
        android:layout_above="@+id/confirm_pw"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/thirtyfive"
        android:background="@color/formfieldbg"
        android:drawableLeft="@drawable/ic_mobile"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="number"
        android:textSize="@dimen/form_text_size" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="@dimen/form_field_width"
        android:layout_height="@dimen/button_and_form_field_height"
        android:layout_above="@+id/mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/thirtyfive"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_location"
        android:ems="10"
        android:hint="@string/address_reg"
        android:inputType="text"
        android:textSize="@dimen/form_text_size" />


    <Spinner
        android:id="@+id/spinner"
        android:background="#11000000"
        android:layout_width="@dimen/twosixty"
        android:layout_height="@dimen/button_and_form_field_height"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />



    <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/twosix"
        android:layout_height="@dimen/button_and_form_field_height"
        android:layout_marginTop="@dimen/twenty"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/thirtyfive"
            android:textColor="@color/white"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/thirtyfive"
            android:paddingLeft="@dimen/ten"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="@dimen/form_text_size"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>