<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editinfoActivity">







<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:weightSum="10"
    android:background="@drawable/sett_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:text="@string/edit_information"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/mobile"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_above="@+id/confirm_pw"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_mobile"
            android:ems="10"
            android:hint="@string/mobile"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/address"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_above="@+id/mobile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/ic_location"
            android:ems="10"
            android:hint="@string/address_reg"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16dp" />


        <Button
            android:id="@+id/button_update"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="#04ea00"
            android:text="@string/update_info"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</LinearLayout>
</LinearLayout>
