<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity.AddMedicineActivity">

    <TextView
        android:id="@+id/pop_textView"
        android:layout_width="277dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/popMsg"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMedicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtMedicine"
        android:layout_width="277dp"
        android:layout_height="38dp"
        android:layout_below="@id/pop_textView"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />


    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMedicine"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/btnClear"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/txtMedicine"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@android:drawable/ic_delete" />

</android.support.constraint.ConstraintLayout>