<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sett_bg"
    tools:context=".Activity.AddPatientActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="183dp"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/add_patient"
                android:textColor="#FCF4FCED"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <EditText
                android:id="@+id/txtpatient"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="17dp"
                android:background="@color/hintback"
                android:ems="10"
                android:hint="@string/patient_name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHighlight="#2FFFFFFF"
                android:textColorHint="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/mobileNo"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_above="@+id/txtpatient"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:background="@color/hintback"
                android:ems="10"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtpatient" />
            <EditText
                android:id="@+id/txtaddress"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:background="#48000000"
                android:ems="10"
                android:hint="@string/address_reg"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdiagnosis" />

            <EditText
                android:id="@+id/txtdiagnosis"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="13dp"
                android:background="#48000000"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/diagnosis"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNo" />


            <EditText
                android:id="@+id/txtPrescription"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:background="#48000000"
                android:ems="10"
                android:hint="@string/addMedicine"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAddress" />




            <Button
                android:id="@+id/btn_addPatient"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_marginStart="96dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:background="@color/green"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/med4"
                app:layout_constraintVertical_bias="0.05" />

        </LinearLayout>
    </ScrollView>

    <!-- <ImageView
         android:id="@+id/imageView8"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="130dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/apollohospital" />-->

</android.support.constraint.ConstraintLayout>