<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.updatePasswordActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        android:background="@drawable/sett_bg"
        tools:layout_editor_absoluteY="0dp">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/update_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/thirtyfour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            android:layout_width="@dimen/twofiftyone"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/logo_height"
            android:layout_marginLeft="@dimen/top_heding_text_size"
            android:orientation="vertical">

            <EditText
                android:id="@+id/current_pw"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_above="@+id/txtpatient"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="164dp"
                android:background="@color/formfieldbg"
                android:drawableLeft="@drawable/ic_pw"
                android:ems="10"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/form_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textGrid" />

            <EditText
                android:id="@+id/new_pw"
                android:layout_width="@dimen/form_field_width"
                android:layout_height="@dimen/button_and_form_field_height"
                android:layout_above="@+id/txtpatient"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:background="@color/formfieldbg"
                android:drawableLeft="@drawable/ic_pw"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/form_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_pw" />

            <EditText
                android:id="@+id/confirm_pw"
                android:layout_width="@dimen/form_field_width"
                android:layout_height="@dimen/button_and_form_field_height"
                android:layout_above="@+id/pw"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:background="@color/formfieldbg"
                android:drawableLeft="@drawable/ic_pw"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/form_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_pw" />


            <Button
                android:id="@+id/button_update"
                android:layout_width="@dimen/twosix"
                android:layout_height="53dp"
                android:layout_marginTop="48dp"
                android:background="@color/green"
                android:text="@string/update_info"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_pw" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>